--- a/index.html
+++ b/index.html
@@ -2,9 +2,112 @@
 <html lang="en">
 <html>
   <head>
-    <Title> My Webpage! </Title>
-  </head>
-  <body>
-    <h1>Welcome to my github page</h1>
+    <meta charset="UTD-8>
+      <meta name="viewport" content="width=device-width, inital-scale=1.0>
+    <Title> Lailah Smith-My Webpage! </Title>
+ <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding-top: 30px;
+            min-height: 70px;
+            border-bottom: #fff 3px solid;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 24px;
+        }
+        table {
+            width: 100%;
+            margin: 20px 0;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #333;
+            color: #fff;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="container">
+             <h1>Welcome to my personal Github page</h1>
+        </div>
+    </header>
+    <div class="container">
+        <section>
+            <h2>About Me:)</h2>
+            <p>Hello! I'm Lailah Smith, a Computer Science major. This is my personal GitHub page where you can find information about my projects and interests.</p>
+        </section>
+      <section>
+            <h2>Information</h2>
+            <table>
+                <tr>
+                    <th>Category</th>
+                    <th>Details</th>
+                </tr>
+                <tr>
+                    <td>Education</td>
+                    <td>[I recently graduated from Valley Stream Central High School in Ny with honors, Multiple Awards anmd wonderful reccomendations. 
+                      i am currently a sophomore at Lincoln University majoring in Computer science.]</td>
+                </tr>
+                <tr>
+                    <td>Skills</td>
+                    <td>[Problem Solving, Event coordination, time management, adaptability, quick learner. I have worked with java, HTML, Python, Visual basic, Snap, and Scratch]</td>
+                </tr>
+                <tr>
+                    <td>Projects</td>
+                    <td>[Your Projects]</td>
+                </tr>
+                <tr>
+                    <td>Social Media Links</td>
+                    <td>[My Github account is: @basquiat13]</td>
+                </tr>
+                <tr>
+                    <td>Contact Info</td>
+                    <td>[My phone number is 516-549-6631, my email is lailah.smith@lions.lincoln.edu]</td>
+                </tr>
+                <tr>
+                    <td>Future Goals</td>
+                    <td>[I hope to graduate with at least magna cum laude and be able to pursue my masters degree. Id like to work and build my way up in a company until i feel comfortable to branch off and create my own business.
+                      Where i am able to offer services to any businesses we are partner with.]</td>
+                </tr>
+            </table>
+        </section>
+        <section class="resume">
+            <h2>Download My Resume</h2>
+            <p>Click the link below to download my resume in PDF format:</p>
+            <a href="https://docs.google.com/document/d/1DEhGIx704JJIwC-dN21JbmejuowfWcIHTUbsIkn9g74/edit?usp=sharing" download>Download Resume</a>
+        </section>
+    </div>
   </body>
 </html>
+
+
+
+
+
+
+
+ 
+
